[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nithin1729S <sureshnithin1729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
langchain = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
